--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
 
 </head>
-<body onload="alertUser('Olá, bem-vindo(a) à minha página!')">
+<body onload="alertUser('Olá, bem-vindo(a) à minha página! :)')">
 
     <main>
     <div class="titulo">
@@ -25,7 +25,9 @@
         <img src="./Imagens/eu.jpg" alt="Imagem de perfil" id="foto">
     </div>
     <h2 class="meunome">Hítalo José Tavares de Araújo</h2>
-    <p class="descricao">Mestrando em Engenharia Civil pelo PPGEC - UFPE e Graduando em Ciência da Computação pelo CIn - UFPE</p>
+    <p class="descricao">Mestrando em Engenharia Civil pelo PPGEC - UFPE</p>
+    <p class="descricao">Graduando em Ciência da Computação pelo CIn - UFPE</p>
+    <p class="descricao">Técnico em Mecânica Industrial pelo IFPE</p>
     <hr>
     <div class="informacoes">
         <table>
