--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hítalo Araújo</title>
     <link rel="stylesheet" href="main.css">
-    
-    <script>
-        function alertUser(msg) {
-            alert(msg);
-        }
-    </script>
 
 </head>
-<body onload="alertUser('Olá, bem-vindo(a) à minha página! :)')">
+<body>
 
     <main>
     <div class="titulo">
